--- a/chess-clock.css
+++ b/chess-clock.css
@@ -1,21 +1,24 @@
 * {
     box-sizing: border-box;
     font-family: 'Space Mono', monospace;
+    word-spacing: -0.3em;
 }
 
 html {
     background: #000;
     color: #fff;
+    font-size: 30px;
 }
 
 body {
+    display: relative;
     margin: 0;
 }
 
 #app-wrapper {
     display: grid;
     grid-template-columns: 50vw 50vw;
-    grid-template-rows: 50vh 50vh;
+    grid-template-rows: 45vh 45vh;
 }
 
 .timer {
@@ -26,31 +29,101 @@ body {
 }
 
 #t1 {
-    border-right: 1px solid #fff;
+    border-right: 1px solid #666;
 }
 
 #t2 {
-    border-left: 1px solid #fff;
+    border-left: 1px solid #666;
     color: #666;
 }
 
-#switch-button {
+button {
     background: #6f00ff;
     border: none;
     color: #fff;
     cursor: pointer;
+    font-size: 30px;
+}
+
+button:active {
+    background: #4600a1;
+}
+
+#switch-btn {
     font-size: 8vw;
     grid-column-start: 1;
     grid-column-end: 3;
     letter-spacing: 1vw;
 }
 
-#switch-button:active {
-    background: #4600a1;
-}
-
-#switch-button:focus-visible {
+#switch-btn:focus-visible {
     border: none;
     outline: none;
     text-decoration: underline;
+}
+
+#small-btn-wrapper {
+    display: grid;
+    grid-template-columns: 33.33333vw 33.33333vw 33.33333vw;
+    grid-template-rows: 10vh;
+}
+
+.small-btn {
+    background: transparent;
+    border: 1px solid #666;
+    border-bottom-width: 2px;
+    border-top-width: 2px;
+    font-size: 20px;
+}
+
+#settings-btn {
+    top: 6vh;
+}
+
+#reset-btn {
+    top: 21vh;
+}
+
+#pause-btn {
+    top: 36vh;
+}
+
+/* SETTINGS */
+
+#settings-wrapper {
+    background: #000;
+    padding: 3vw 5vw;
+    position: absolute;
+    left: 0vw;
+    width: 100vw;
+    height: 100vh;
+    transition: left 0.4s ease;
+}
+
+input[type="number"] {
+    font-size: 30px;
+    margin-bottom: 20px;
+    padding: 5px 10px;
+    width: 120px;
+}
+
+hr {
+    margin: 30px 0 40px;
+}
+
+.right-margin {
+    margin-right: 20px;
+}
+
+.primary {
+    border: 2px solid #6f00ff;
+    margin-bottom: 20px;
+    margin-right: 12px;
+    padding: 5px 20px;
+}
+
+.secondary {
+    background: transparent;
+    border: 2px solid #fff;
+    padding: 5px 20px;
 }
