--- a/chess-clock.css
+++ b/chess-clock.css
@@ -73,7 +73,8 @@ button:active {
     border: 1px solid #666;
     border-bottom-width: 2px;
     border-top-width: 2px;
-    font-size: 20px;
+    font-size: 18px;
+    margin: 0;
 }
 
 #settings-btn {
@@ -89,6 +90,15 @@ button:active {
 }
 
 /* SETTINGS */
+
+h1 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+p {
+    margin: 10px 0 20;
+}
 
 #settings-wrapper {
     background: #000;
@@ -125,5 +135,6 @@ hr {
 .secondary {
     background: transparent;
     border: 2px solid #fff;
+    margin-bottom: 20px;
     padding: 5px 20px;
 }
